# SpectrumManager

./: README.md
db_tools/: README.md  create_db.sh  create_tables.sh  db_console.sh  delete_db.sql  run_wrinfo.py  sample_ap_insert.sql
optimizer/: README.txt  collector.py  optimizer.py  setchan.sh
sample_cron_scripts/: run_all_iperfs.sh  run_iperf.sh  run_optimizer.sh  sample_crontab.txt  wrinfo_periodic.sh
wrinfo/: CMakeLists.txt  README.txt  jdattr.c  jdattr.h  jdump.c  jdump.h  jdump_test.c  main.c  nl_inc.h  nlcctx.c  nlcctx.h  wifi_interface.c  wifi_interface.h  wifi_scan.c  wifi_scan.h  wifi_survey.c  wifi_survey.h
wrinfo/cmake/: Findlibnl.cmake  openwrt_toolchain.cmake
